# dray

./: .gitignore  Cargo.toml  example.dray  test.dray
crates/dray-cli/: Cargo.toml  example.dray  test.dray
crates/dray-cli/src/: main.rs
crates/dray-codegen/: Cargo.toml
crates/dray-codegen/runtime/: draybase.c  draybase.h
crates/dray-codegen/src/: expr.rs  lib.rs  lower.rs  stmt.rs  ty.rs
crates/dray-codegen/tests/: codegen.rs
crates/dray-driver/: Cargo.toml
crates/dray-driver/src/: backend.rs  lib.rs
crates/dray-driver/tests/: driver.rs
crates/dray-hir/: Cargo.toml
crates/dray-hir/src/: debug.rs  hir.rs  lib.rs  lower.rs  mono.rs  types.rs
crates/dray-hir/tests/: resolve.rs
crates/dray-ir/: Cargo.toml
crates/dray-ir/src/: debug.rs  lib.rs
crates/dray-ir/tests/: rc.rs
crates/dray-syntax/: Cargo.toml
crates/dray-syntax/src/: cst.rs  debug.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/dray-syntax/tests/: debug.rs  lexer.rs  parser.rs
lib/system/: draybase.c  draybase.h
stdlib/: .gitkeep
tools/dray-fmt/: Cargo.toml
tools/dray-fmt/src/: main.rs
tools/dray-lsp/: Cargo.toml
tools/dray-lsp/src/: main.rs
