# SPDX-License-Identifier: Apache-2.0

[package]
name = "dray"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dray"
path = "src/main.rs"

[dependencies]
dray-syntax = { path = "../dray-syntax" }
dray-hir = { path = "../dray-hir" }
dray-driver = { path = "../dray-driver" }
