# SPDX-License-Identifier: Apache-2.0
[package]
name = "dray-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dray-hir = { path = "../dray-hir" }
dray-ir = { path = "../dray-ir" }
tamago.workspace = true

[dev-dependencies]
dray-syntax = { path = "../dray-syntax" }
